[metadata]
name = lightspin-api-client
description = Lightspin API Client
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    api
    client
    lightspin
author = Lightspin Technologies
author_email = support@lightspin.io
url = https://github.com/lightspin-tech/lightspin-api-client
license = MIT
platforms = any
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source Code = https://github.com/lightspin-tech/lightspin-api-client

[options]
packages = find:
package_dir=
    =src
include_package_data = True
python_requires = >=3.6
install_requires =
    datetime
    retry
    requests
    datadog_api_client
    elasticsearch
setup_requires =
    setuptools
